--- a/app/src/main/res/layout/activity_kursus.xml
+++ b/app/src/main/res/layout/activity_kursus.xml
@@ -4,5 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@drawable/splashscreen"/>
+    tools:context=".Kursus"
+    android:background="@drawable/background_app">
+
+</androidx.appcompat.widget.LinearLayoutCompat>
