--- a/app/src/main/res/layout/activity_submit_assign.xml
+++ b/app/src/main/res/layout/activity_submit_assign.xml
@@ -8,6 +8,18 @@
     android:background="@drawable/background_app">
 
     <Button
+        android:id="@+id/pilihFile"
+        android:layout_width="234dp"
+        android:layout_height="44dp"
+        android:background="@drawable/btn_pilih_file"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.627" />
+
+    <Button
         android:id="@+id/button"
         android:layout_width="360dp"
         android:layout_height="54dp"
