--- a/app/src/main/res/layout/activity_tugas.xml
+++ b/app/src/main/res/layout/activity_tugas.xml
@@ -7,4 +7,14 @@
     tools:context=".Tugas"
     android:background="@drawable/background_app">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTugas"
+        android:layout_width="416dp"
+        android:layout_height="662dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="0dp"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
