--- a/app/src/main/res/layout/item_list_kursus.xml
+++ b/app/src/main/res/layout/item_list_kursus.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:orientation="vertical"
         android:background="@drawable/div_pelajaran">
