--- a/app/src/main/res/layout/activity_submit_assign.xml
+++ b/app/src/main/res/layout/activity_submit_assign.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.627" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSubmit"
         android:layout_width="360dp"
         android:layout_height="54dp"
         app:layout_constraintBottom_toBottomOf="parent"
